Use `Stream.toList()` in `getAllEntities()`
Fixes #43
Replace 'Stream.collect(Collectors.toList())' with 'Stream.toList()'